# proto-change-miner

./: .gitignore  README.md  RESEARCH_PLAN.md  collect_transactions.py  mine_association_rules.py  proto_finder.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: collect_transactions.py  detect_protobuf_repos.py
src/experiments/rq0/: __init__.py  baseline_corpus.py  compute_pairs.py  extract_events.py  main.py  merge_outputs.py  schema.py
src/lib/: categorize.py  config.py  git_backend.py  io_utils.py  skip_rules.py
src/utils/: logging_setup.py
